@@ -6,7 +6,7 @@ import './App.css';
 
 import Header from './header/header.js';
 // import Footer from './footer/footer.js';
-import DeploymentMessage from './deployment-message/deploymentmessage.js';
+// import DeploymentMessage from './deployment-message/deploymentmessage.js';
 import { Routes } from './routes/routes';
 
 
@@ -20,7 +20,7 @@ class App extends Component {
       <div>
         {/* <h1>the Knews - Live</h1> */}
 
-      <DeploymentMessage />
+      {/* <DeploymentMessage /> */}
       <Header />
       <Routes />
       {/* <Footer /> */}
