@@ -19,10 +19,16 @@
             background-color: grey;
             width:100%;
         }
-            .tileSizeControls button{
-                margin: 5px;
-                padding: 0;
+
+            .controlBtns{
+                display: flex;
             }
+                .controlBtns button{
+                    margin: 5px;
+                    padding: 0;
+                    width: 5rem;
+                }
+
 @media (min-width: 768px) {
     .home-wrapper{
         margin: 0 auto;
